# rust-debugger-skill

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  pages.yml  release.yml
benchmarks/: FINDINGS.md  README.md  bench.py  bench_repo.py  bench_tsz.py  multitrial.py
benchmarks/adopt/: extract_session.py  results-grounding.json
benchmarks/results-repo/: cases.json  runs-display-transcripts.json  runs-partial-earlier.json  runs-summary-7.json
benchmarks/results-repo/transcripts-display/: 8c13977ef8-with.jsonl  8c13977ef8-without.jsonl  c6f258fba0-with.jsonl  c6f258fba0-without.jsonl
benchmarks/results-tsz/: FINDINGS.md  README.md  cases-tsz.json  run2-opus-vs-sonnet.md  run3-full-sweep.md  runs-opus-A.json  runs-opus-B.json  runs-sonnet.json
benchmarks/tasks/accumulator/: Cargo.toml  PROMPT.md
benchmarks/tasks/accumulator/src/: lib.rs
benchmarks/tasks/bracket_depth/: Cargo.toml
benchmarks/tasks/bracket_depth/src/: lib.rs
benchmarks/tasks/overflow/: Cargo.toml
benchmarks/tasks/overflow/src/: lib.rs
benchmarks/tasks/panic_index/: Cargo.toml  PROMPT.md
benchmarks/tasks/recursion/: Cargo.toml  PROMPT.md
docs/: DESIGN.md  json-schema.md
examples/demo/: Cargo.toml
examples/demo/src/: main.rs
site/: index.html
skill/rust-debugger/: SKILL.md
skill/rustdbg/: SKILL.md
src/: client.rs  daemon.rs  mcp.rs  session.rs  util.rs
src/rustdbg/: __init__.py  cli.py  daemon.py  dap.py  lsp.py  mcp.py  session.py
tests/: test_smoke.py
(+2 files in other folders)
