[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rustdbg"
version = "0.1.0"
description = "IDE-grade Rust debugging for coding agents (Claude Code / Codex) — as a skill and an MCP server. Zero dependencies."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT OR Apache-2.0"
license-files = ["LICENSE-MIT", "LICENSE-APACHE"]
authors = [{ name = "Mohsen Azimi" }]
keywords = ["rust", "debugger", "lldb", "dap", "rust-analyzer", "mcp", "agent",
            "claude-code", "codex", "lsp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Debuggers",
]
dependencies = []   # stdlib only

[project.urls]
Homepage = "https://github.com/mohsen1/rustdbg"
Repository = "https://github.com/mohsen1/rustdbg"
Issues = "https://github.com/mohsen1/rustdbg/issues"

[project.scripts]
rdbg = "rustdbg.cli:main"
rustdbg-mcp = "rustdbg.mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rustdbg"]
